package com.capgemini.engineering.ddd.frozen_food.delivery;

import org.springframework.beans.BeansException;
import org.springframework.context.ApplicationContext;
import org.springframework.context.ApplicationContextAware;

public class Delivery implements ApplicationContextAware {

    //TO DO
    @Override
    public void setApplicationContext(ApplicationContext applicationContext) throws BeansException {

    }
}
