package com.capgemini.engineering.ddd.frozen_food.domain.menu;

public interface RecipeItem {

    String title();

}
