package com.capgemini.engineering.ddd.frozen_food.domain.producao;

public enum Unit {
    KG,T,UN
}
